[metadata]
name = ipbb
author = Alessandro Thea
author_email = alessandro.thea@stfc.ac.uk
version = attr: ipbb.__version__
url = https://github.com/ipbus/ipbb
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.entry_points]
console_scripts =
    ipbb=ipbb.scripts.builder:main
    ipb-prog=ipbb.scripts.programmer:main